# web-server

./: .env.example  .gitignore  .gitlab-ci.yml  .swp  Cargo.toml  Makefile  README.md  Rocket.toml  data.txt  docker-compose.staging.yml  docker-compose.yml  home.html  post.html
.data/Hotfix/: hotfix.md
.data/images/: system_structure.ai
.github/workflows/: development.yaml  test.yaml  user.yaml  workflow.yaml
actix/: .env.example  Cargo.toml
actix/src/: app.rs  main.rs
actix/src/app/models/: model.rs
actix/src/app/resolvers/: graphql.rs
actix/src/config/: configure.rs  database.rs  mod.rs
actix/src/database/: schema.rs
apollo-router/: .env.example  router.yaml  supergraph.graphql  supergraph.yaml
auth-service/: .env.example  Cargo.toml
auth-service/src/: graphql.rs
benches/: benchmark.rs
common/: Cargo.toml
common/src/: lib.rs
list-post/: .editorconfig  Cargo.toml  Rocket.toml  diesel.toml
list-post/migrations/2022-09-06-035630_create_user_table/: up.sql
list-post/src/: main.rs  schema.rs
microservice/auth-service/: .env.example  Cargo.toml
microservice/auth-service/src/: graphql.rs
microservice/auth-service/src/persistence/: connection.rs
microservice/auth-service/tests/common/: mod.rs
microservice/list-post/: .env.example  .gitignore  Cargo.toml  Rocket.toml
microservice/list-post/migrations/2022-09-06-032812_insert_posts_table/: down.sql  up.sql
microservice/list-post/migrations/2022-09-06-035630_create_user_table/: down.sql
microservice/list-post/src/config/: app.rs  database.rs
microservice/list-post/src/routes/: graphql.rs
microservice/planets-service/: .env.example  Cargo.toml
microservice/planets-service/src/persistence/: connection.rs
microservice/post-service/: .env.example  Cargo.toml  Dockerfile
microservice/post-service/src/: lib.rs  main.rs
microservice/post-service/src/config/: database.rs  graphql.rs
microservice/satellites-service/: .env.example
migrations/2022-01-01-000001_create_schema/: down.sql  up.sql
migrations/2022-01-02-000002_create_posts_table/: up.sql
migrations/2022-09-01-000003_update_posts_table/: up.sql
migrations/2022-09-06-032752_create_posts_table/: down.sql
satellites-service/: .env.example  Cargo.toml  README.md
satellites-service/src/: main.rs
satellites-service/src/persistence/: connection.rs  schema.rs
src/: config.rs  database.rs  main.rs  models.rs  routes.rs
src/api/: json.rs
src/config/: app.rs  database.rs
src/database/: connection.rs
src/models/: .gitignore  posts.rs  starword.rs
src/routes/: dynamic_path.rs  forwarding.rs  graphql.rs  hello.rs  home.rs  ignored_segments.rs  user.rs
users/: .env.example  Cargo.toml  README.md  diesel.toml
users/benches/: main.rs
users/benches/example/: fibonacci.rs
users/benches/repository/: check_existing_user_benchmark.rs  mod.rs
users/benches/utils/: password.rs
users/docker/: dev.Dockerfile  staging.Dockerfile
users/docker/deploy/: docker-compose.yaml
users/docker/deploy/aws/Ansible/install-docker/: inventory.yaml  playbook.yaml
users/docker/deploy/aws/Ansible/run-docker-compose/: env.yaml  playbook.yaml
users/docker/deploy/aws/etc/nginx/conf.d/: github-laravel.kukun.site.conf  gitlab-laravel.kukun.site.conf
users/docker/deploy/aws/usr/local/etc/haproxy/: haproxy.cfg
users/docker/development/: Dockerfile  Level1.Dockerfile  Level2.Dockerfile  Level3.Dockerfile  Level4.Dockerfile  docker-compose.yaml
users/docker/production/: Dockerfile  docker-compose.yaml
users/src/: app.rs  lib.rs  main.rs
users/src/app/entities/: user_entity.rs
users/src/app/repository/: user_repository.rs
users/src/app/requests/: login_request.rs  mod.rs  register_request.rs
users/src/app/resolvers/: user_resolver.rs
users/src/app/schema/: mod.rs  user_schema.rs
users/src/app/types/: context.rs  mod.rs
users/src/app/types/users/: mod.rs  query_users.rs
users/src/config/: constant.rs  database.rs  graphql.rs  mod.rs
users/src/database/: migrate.rs  mod.rs  schema.rs
users/src/database/migrations/2022-01-01-000000_create_users_table/: down.sql  up.sql
users/src/database/migrations/2022-01-01-000001_create_user_profiles_table/: down.sql  up.sql
users/src/database/migrations/2022-11-10-072831_input_users_table/: down.sql  up.sql
users/src/database/migrations/2022-11-10-073114_input_user_profiles_table/: down.sql  up.sql
users/src/utils/: password.rs
users/tests/: mutation_tests.rs
users/tests/common/: mod.rs
users/virtual/Ansible/: README.md  Vagrantfile  playbook.yml
users/virtual/Vagrant/: README.md  Vagrantfile
users/virtual/config/: haproxy.cfg  nginx.conf
users/virtual/ssl/production/: certificate.crt  csr.pem  private.key
(+14 files in other folders)
