[package]
name = 'web-server'
version = '0.1.0'
edition = '2021'
authors = ["Kukun <hainghia.developer@gmail.com>", "HaiNghia <hohainghia19@gmail.com>"]
description = 'Website của Kukun'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = '8.1.2'
anyhow = "1.0.62"
rocket = { version = '0.5.0-rc.2', features = ['http2', 'secrets', 'json'] }
async-graphql = "4.0.12"
async-graphql-rocket = "4.0.12"