[package]
name = "documentation"
description = "boilerplate rocket, async-graphql, sqlx"
version = "0.1.0"
authors = ["Kukun <hainghia.developer@gmail.com>", "HaiNghia <hohainghia19@gmail.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ['json', "secrets", "http2"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres", "macros"] }
diesel = { version = "2.0.0", features = ["postgres"] }
anyhow = "1.0.63"
async-trait = "0.1.57"
async-graphql = '4.0.12'
async-graphql-rocket = '4.0.12'
deadpool = "0.9.5"
dotenv = "0.15.0"
serde = "1.0.144"
strum = "0.24.1"
strum_macros = "0.24.3"
