# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "documentation"
description = "boilerplate rocket, async-graphql, sqlx"
version = "0.1.0"
authors = ["Kukun <hainghia.developer@gmail.com>", "HaiNghia <hohainghia19@gmail.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ['json', "secrets", "http2"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
anyhow = "1.0.65"
async-trait = "0.1.57"
async-graphql = { version = "4.0.13", features = ["chrono"] }
async-graphql-rocket = '4.0.13'
deadpool = "0.9.5"
dotenv = "0.15.0"
serde = "1.0.144"
strum = "0.24.1"
strum_macros = "0.24.3"
chrono = "0.4.22"

[dev-dependencies]
bencher = "0.1.5"
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false