[package]
name = "satellites-service"
version = "0.1.0"
authors = ["Hai Nghia <hohainghia19@gmail.com>"]
edition = "2021"
#default-run = 'satellites-service'

[dependencies]
async-graphql = { version = "4.0.15", features = ["chrono"] }
async-graphql-actix-web = "4.0.15"
actix-web = "4.2.1"
actix-rt = "2.7.0"
serde = { version = "1.0.145", features = ["derive"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0.0"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
serde_json = "1.0.86"
jsonpath_lib = "0.3.0"
testcontainers = "0.14.0"
