[package]
name = "users"
version = "0.1.0"
edition = "2021"
default-run = "users"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-utils = { path = "../common" }
async-graphql = { version = "5.0.6", features = ["chrono", "log"] }
async-graphql-actix-web = "5.0.6"
actix-web = "4.3.0"
actix-rt = "2.8.0"
serde = { version = "1.0.152", features = ["derive"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
argonautica = "0.2.0"
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
serde_json = "1.0.93"
jsonpath_lib = "0.3.0"
base64 = "0.21.0"
testcontainers = "0.14.0"
bencher = "0.1.5"
criterion = "0.4.0"

[[bench]]
name = "main"
harness = false
