[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-graphql = { version = "5.0.6", features = ["chrono", "log"] }
async-graphql-actix-web = "5.0.6"
actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = { version = "1.0.154", features = ["derive"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
argonautica = "0.2.0"
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
serde_json = "1.0.94"
jsonpath_lib = "0.3.0"
base64 = "0.21.0"
testcontainers = "0.14.0"
bencher = "0.1.5"
criterion = "0.4.0"

[[bench]]
name = "main"
harness = false
